Initial local changes on typo
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@670 3b2ea118-c802-0410-a64b-92752010ce07

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,8 @@ test:
   password: 
 
 production:
-  adapter: mysql
+  adapter: postgresql
   database: typo
-  host: localhost
-  username: root
+  host: 
+  username: typo
   password: 
