--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,16 +1,17 @@
 # General Apache options
-AddHandler fastcgi-script .fcgi
+AddHandler fcgid-script .fcgi
 AddHandler cgi-script .cgi
 Options +FollowSymLinks +ExecCGI
 
 # Redirect all requests not available on the filesystem to Rails
 RewriteEngine On
 # try to suggest current rss subscribers that the url moved permently
-RewriteRule ^xml/([a-z]+)$ /xml/$1/feed.xml [R=301]
-RewriteRule ^$ index.html [QSA]
-RewriteRule ^([^.]+)$ $1.html [QSA]
+# RewriteRule ^xml/([a-z]+)$ /xml/$1/feed.xml [R=301]
+
+# RewriteRule ^$ index.html [QSA]
+# RewriteRule ^([^.]+)$ $1.html [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ dispatch.fcgi [QSA,L]
 
 # In case Rails experiences terminal errors
-ErrorDocument 500 "<h2>Application Errror</h2>Typo could not be reached
+ErrorDocument 500 "<h2>Application Errror</h2> <p>Typo could not be reached</p>
