--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,4 +20,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ dispatch.fcgi [QSA,L]
 
 # In case Rails experiences terminal errors
-ErrorDocument 500 "<h2>Application Errror</h2> <p>Typo could not be reached</p>
+ErrorDocument 500 "<h2>Application Error</h2> <p>Typo could not be reached</p>
