Enable and tune caching
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@697 3b2ea118-c802-0410-a64b-92752010ce07

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
 development:
-  adapter: mysql
-  database: typo_dev
-  host: localhost
-  username: root
+  adapter: postgresql
+  database: typo
+  host: 
+  username: typo
   password: 
 
 test:
