--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,8 +14,9 @@ RewriteEngine On
 # try to suggest current rss subscribers that the url moved permently
 # RewriteRule ^xml/([a-z]+)$ /xml/$1/feed.xml [R=301]
 
-# RewriteRule ^$ index.html [QSA]
-# RewriteRule ^([^.]+)$ $1.html [QSA]
+RewriteRule ^$ index.html [QSA]
+RewriteRule ^([^.]+)/$ $1.html [QSA]
+RewriteRule ^([^.]+)$ $1.html [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ dispatch.fcgi [QSA,L]
 
