Fixup after sync; user postgresql db typo_tests for testing
git-svn-id: file:///home/matijs/.svk/typo/local/trunk@1084 3b2ea118-c802-0410-a64b-92752010ce07

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,10 @@ development:
   password: 
 
 test:
-  adapter: mysql
+  adapter: postgresql
   database: typo_tests
-  host: localhost
-  username: root
+  host:
+  username: typo
   password: 
 
 production:
