--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,7 +19,6 @@ RewriteEngine On
 # Example:
 #   Alias /blog /path/to/typo/public
 #   RewriteBase /blog
-RewriteBase /typo/
 
 RewriteRule ^$ index.html [QSA]
 RewriteRule ^([^.]+)/$ $1.html [QSA]
@@ -34,3 +33,4 @@ RewriteRule ^(.*)$ dispatch.fcgi [QSA,L]
 #   ErrorDocument 500 /500.html
 
 ErrorDocument 500 "<h2>Application error</h2> <p>Typo failed to start properly</p>"
+#ErrorDocument 500 /500.html
