--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,7 +18,7 @@ RewriteEngine On
 #
 # Example:
 #   Alias /blog /path/to/typo/public
-#   RewriteBase /blog
+RewriteBase /blog
 
 RewriteRule ^$ index.html [QSA]
 RewriteRule ^([^.]+)/$ $1.html [QSA]
